Year 2025 day 11 refactoring.