@@ -18,9 +18,9 @@ package us.coffeecode.advent_of_code.y2025;
 
 import java.util.Collection;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -39,48 +39,48 @@ public class Year2025Day11 {
 
   @Solver(part = 1)
   public long calculatePart1(final PuzzleContext pc) {
-    final Map<String, Collection<String>> routes = getInput(pc);
-    final Map<String, Long> routeCounts = new HashMap<>(routes.size());
-    routeCounts.put(END, Long.valueOf(1));
-    /*
-     * Starting at the end, work backwards to see how many routes each node has to the end. This works because the input
-     * has no loops. If this loops infinitely then the input is bad.
-     */
-    while (!routeCounts.containsKey(START1)) {
-      for (final var entry : routes.entrySet()) {
-        final String node = entry.getKey();
-        if (!routeCounts.containsKey(node)) {
-          final Collection<String> targets = entry.getValue();
-          if (routeCounts.keySet()
-                         .containsAll(targets)) {
-            final long routeCount = targets.stream()
-                                           .mapToLong(n -> routeCounts.get(n)
-                                                                      .longValue())
-                                           .sum();
-            routeCounts.put(node, Long.valueOf(routeCount));
-          }
-        }
-      }
-    }
-    return routeCounts.get(START1)
-                      .longValue();
+    return dfs(getInput(pc), START1, new HashMap<>());
   }
 
   @Solver(part = 2)
   public long calculatePart2(final PuzzleContext pc) {
-    final Map<String, Collection<String>> routes = getInput(pc);
-    return dfs(routes, START2, false, false, new HashMap<>());
+    return dfs(getInput(pc), START2, false, false, new HashMap<>());
   }
 
-  /** Perform a depth-first search with memoization for part two. */
-  private long dfs(final Map<String, Collection<String>> routes, final String current, final boolean int1, final boolean int2, final Map<CacheKey, Long> cache) {
+  /** Perform a depth-first search with memoization for part one. */
+  private long dfs(final Map<String, Collection<String>> routes, final String currentNode, final Map<String, Long> cache) {
     // Found the end: this either counts as one route if we passed through both intermediate nodes, or zero if not.
-    if (END.equals(current)) {
-      return (int1 && int2) ? 1 : 0;
+    if (END.equals(currentNode)) {
+      return 1;
     }
 
     long routeCount = 0;
-    final CacheKey cacheKey = new CacheKey(current, int1, int2);
+
+    // Memoization: we found this route already so use the cached answer.
+    if (cache.containsKey(currentNode)) {
+      return cache.get(currentNode)
+                  .longValue();
+    }
+
+    // Have not visited this node before: visit its children.
+    for (final String nextNode : routes.get(currentNode)) {
+      routeCount += dfs(routes, nextNode, cache);
+    }
+
+    // Save the results of visiting this node in the memoization cache for later use.
+    cache.put(currentNode, Long.valueOf(routeCount));
+    return routeCount;
+  }
+
+  /** Perform a depth-first search with memoization for part two. */
+  private long dfs(final Map<String, Collection<String>> routes, final String currentNode, final boolean visit1, final boolean visit2, final Map<CacheKey, Long> cache) {
+    // Found the end: this either counts as one route if we passed through both intermediate nodes, or zero if not.
+    if (END.equals(currentNode)) {
+      return (visit1 && visit2) ? 1 : 0;
+    }
+
+    long routeCount = 0;
+    final CacheKey cacheKey = new CacheKey(currentNode, visit1, visit2);
 
     // Memoization: we found this route already so use the cached answer.
     if (cache.containsKey(cacheKey)) {
@@ -89,15 +89,15 @@ public class Year2025Day11 {
     }
 
     // Have not visited this node before: visit its children.
-    for (final String nextCurrent : routes.get(current)) {
-      if (INT1.equals(nextCurrent)) {
-        routeCount += dfs(routes, nextCurrent, true, int2, cache);
+    for (final String nextNode : routes.get(currentNode)) {
+      if (VISIT1.equals(nextNode)) {
+        routeCount += dfs(routes, nextNode, true, visit2, cache);
       }
-      else if (INT2.equals(nextCurrent)) {
-        routeCount += dfs(routes, nextCurrent, int1, true, cache);
+      else if (VISIT2.equals(nextNode)) {
+        routeCount += dfs(routes, nextNode, visit1, true, cache);
       }
       else {
-        routeCount += dfs(routes, nextCurrent, int1, int2, cache);
+        routeCount += dfs(routes, nextNode, visit1, visit2, cache);
       }
     }
 
@@ -108,22 +108,16 @@ public class Year2025Day11 {
 
   /** Get the input as a node mapped to the downstream nodes to which it is linked. */
   private Map<String, Collection<String>> getInput(final PuzzleContext pc) {
-    final List<List<String>> lines = il.linesAsStrings(pc, SPLIT);
-    final Map<String, Collection<String>> routes = new HashMap<>(lines.size());
-    for (final List<String> line : lines) {
-      routes.put(line.getFirst()
-                     // Snip off the colon
-                     .substring(0, 3),
-        line.subList(1, line.size()));
-    }
-    return routes;
+    return il.linesAsStrings(pc, SPLIT)
+             .stream()
+             .collect(Collectors.toMap(t -> t.get(0), t -> t.subList(1, t.size())));
   }
 
   /** Combination of state that unique identifies a node visit. This is used as a key in the memoization cache. */
-  private static record CacheKey(String node, boolean fft, boolean dac) {}
+  private static record CacheKey(String node, boolean visit1, boolean visit2) {}
 
   /** Pattern that splits a line of input into tokens. */
-  private static final Pattern SPLIT = Pattern.compile(" ");
+  private static final Pattern SPLIT = Pattern.compile(":? ");
 
   /** Start node for part 1. */
   private static final String START1 = "you";
@@ -132,10 +126,10 @@ public class Year2025Day11 {
   private static final String START2 = "svr";
 
   /** Required intermediate node 1. */
-  private static final String INT1 = "dac";
+  private static final String VISIT1 = "dac";
 
   /** Required intermediate node 2. */
-  private static final String INT2 = "fft";
+  private static final String VISIT2 = "fft";
 
   /** End node for both parts. */
   private static final String END = "out";
